# $Id: CHANGELOG 776 2008-12-7 01:30:27Z dane $

----------------
Mapnik Changelog
----------------
 
A simple log of core changes affecting Mapnik usage.

Developers: Please commit along with changes.

For a complete change history, see the SVN log.


0.6.1 SVN
---------

- OGCServer: Made lxml dependency optional (r1085) (#303)

- Rasters: Handle rounding to allow better alignment of raster layers (r1079) (#295)

- AGG Renderer: Added option to control output JPEG quality (r1078) (#198)

- Plugins: Fixed segfault in OGR Plugin with empty geometries (r1074) (#292)



Mapnik 0.6.0 Release
--------------------

- Python: Added support for aspect_fix_mode (r1013)

- Fixed axis-ordering for WMS 1.3.0 request (r1051) (#241)

- Added option to all plugins to support using a 'base' path argument (r1042)

- Symbolizers: RasterSymbolizer now support composing modes for hillshading (r1027)

- SCons: Added options to build the rundemo and pgsql2sqlite tools (r989)

- OGCServer: Added content-length output (r986)

- SCons: Replaced LIBS/INCLUDES options for postgres and gdal with pg_config and gdal-config (r977)

- SCons: Created an optional configure stage (r973)

- Python: Added further pickling/copy support to Map, Layers, Datasources, Styles,and Rules (r907,r913,r921)

- OGCServer: Added support for load_map(), allowing reading of XML styles and layers (r901)

- OGCServer: Enabled friendly html output when in debug mode (debug=1 in ogcserver.conf) (r899)

- Plugins: Added Sqlite driver for reading sqlite databases (r881)

- Python: Exposed a number of properties for the Text Symbolizer (r869)

- Plugins: PostGIS plugin now accepts multi-line queries (r862)

- Filter parsing: Allow numbers in the filter field name.
  This allows for shapefiles with columns like '1970'.

- Plugins: Added OGR driver for reading all OGR supported formats (kunitoki) (r836) (#170)

- XML: Added serialization of Fontsets (r807)

- XML: Added support for reading xml from a string (r806)
