@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 0.6.1 SVN
 ---------
 
+- Python: Exposed dash_array get method (#317)
+
 - OGCServer: Made lxml dependency optional (r1085) (#303)
 
 - Rasters: Handle rounding to allow better alignment of raster layers (r1079) (#295)
